Refactored ui and agent

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,6 @@ VITE_APP_NAME="${APP_NAME}"
 
 # Lingo.dev API Configuration
 LINGO_API_KEY=your_lingo_api_key_here
+
+# OpenAI API Configuration (for GPT-4 Vision + Whisper)
+OPENAI_API_KEY=your_openai_api_key_here
