--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/iso3166": "^4.3",
-        "lingodotdev/sdk": "^0.1.6"
+        "lingodotdev/sdk": "^0.1.6",
+        "openai-php/client": "^0.18.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
